<resources>

    <string name="facebook_app_id">332282454208158</string>
    <string name="fb_login_protocol_scheme">fb332282454208158</string>

    <string name="app_name">EspacioJahiel</string>
    <string name="subtitulo">Espacio Angélico Jahiel</string>
    <string name="derechos1">© 2017 Todos los derechos reservados. ESPACIOJAHIEL.COM</string>
    <string name="derechos2">Amenabar 2707 | Rosario - Santa Fe | Tel: +54 (0341) 156-702392</string>
    <string name="mail">info@espaciojahiel.com | www.espaciojahiel.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">info@espaciojahiel.com</string>
    <string name="termino">Términos y Condiciones</string>
    <string name="privacidad">Políticas de Privacidad</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vacio">No hay Elementos</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="mail_cliente">Dirección de Email</string>
    <string name="dialog_usuario">Ud. es un usuario registrado?</string>
    <string name="clave_cliente">Contraseña</string>
    <string name="olvido_contraseña">¿Olvidaste la contraseña?</string>
    <string name="dialogo_contrasenia">Restablecimiento de contraseña</string>
    <string name="mensaje_contrasenia">Ingrese la dirección de correo electrónico que utilizó para registrarse.
    Le enviaremos un mail con instrucciones para definir una nueva contraseña</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_ok">NO</string>
    <string name="dialog_cancel">SI</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="nombre_usuario">Nombre y Apellido</string>
    <string name="confirmar_cliente">Confirmar Contraseña</string>
    <string name="fecha_nac">Fecha Nacimiento</string>
    <string name="fecha_nac_ejemplo">01/01/1900</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="ingreso">Ingrese la fecha de nacimiento de quien desea ver su arcangel</string>
    <string name="ingreso_fecha">Ingrese la fecha en el campo o haga click en la torta</string>

    <!-- botones -->
    <string name="ver">Ver</string>
    <string name="menu_ingresar">Entrar</string>
    <string name="menu_ingreso">Ingreso Usuario</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_registro">Crear Cuenta</string>
    <string name="foto">Foto Perfil</string>
    <string name="descargar">Descargar</string>
    <string name="fondo">Fondo Pant.</string>
    <string name="favorito">Favorito</string>

    <!-- opciones -->
    <string name="mensaje_canalizado">Mensaje Canalizado Semanal</string>
    <string name="mi_arcangel">Mi Arcangel</string>
    <string name="mi_arcangel_general">Cual es Tu Arcangel</string>
    <string name="videos_meditacion">Videos de meditación</string>
    <string name="fondos_pantalla">Fondos de Pantalla</string>
    <string name="mis_fondos">Mis Fondos de Pantalla</string>
    <string name="eventos">Eventos</string>
    <string name="mensajes_guardados">Mis Mensajes Guardados</string>
    <string name="espacio">Espacios Amigos</string>
    <string name="acerca">Acerca De...</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="compartir">Compartir</string>
    <string name="home">Principal</string>
    <string name="configuracion">Configuración</string>
    <string name="video_programa">El Ángel de tu Vida</string>
    <string name="notificaciones">Notificaciones</string>


    <!-- fuentes -->
    <string name="segoe">Segoe UI</string>

    <string name="error_invalid_email">Email invalido</string>
    <string name="error_player">Error al iniciar Yotube (%1$s)</string>
    <string name="btn_skip_intro">Skip Intro</string>


</resources>
