<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:background="@drawable/manos">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewfoto"
            android:layout_width="@dimen/perfil_image_size"
            android:layout_height="@dimen/perfil_image_size"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_circle"
            android:visibility="visible"
            app:border_color="@android:color/white"
            app:border_width="1dp" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/campos_height"
            android:layout_below="@+id/imageViewfoto"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="textPersonName"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/campos_height"
            android:layout_below="@+id/editTextNombre"
            android:ems="10"
            android:hint="@string/mail_cliente"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@+id/editTextMail"
            android:id="@+id/fecha">

        <EditText
            android:id="@+id/editTextFechaNac"
            android:layout_width="@dimen/campos_width_chico"
            android:layout_height="@dimen/campos_height"

            android:ems="10"
            android:hint="@string/fecha_nac"
            android:inputType="date"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/colorAccent" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/buttonFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/torta"
                android:clickable="true"
                app:srcCompat="@drawable/torta" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fecha"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleTintMode="src_in">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextClave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/campos_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:hint="@string/clave_cliente"

                android:inputType="textPassword"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/colorAccent"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_confirmm_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_container"
            android:layout_alignStart="@+id/login_password_container"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleTintMode="src_in">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextConfirmar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/campos_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:hint="@string/confirmar_cliente"

                android:inputType="textPassword"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/colorAccent"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/login_confirmm_container"
            android:layout_marginTop="14dp"
            android:background="@drawable/boton"
            android:text="@string/menu_guardar"
            android:textColor="@color/secondaryText"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/buttonFoto"
            android:layout_width="95dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="79dp"
            android:layout_toEndOf="@id/imageViewfoto"
            android:background="@drawable/btn_ver"
            android:text="@string/foto"
            android:textColor="@color/secondaryText"
            tools:ignore="RtlHardcoded" />




    </RelativeLayout>


</RelativeLayout>