<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cielo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Aplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView20"
                android:layout_marginTop="15dp"
                android:text="@string/subtitulo"
                android:textAlignment="center"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/tamanio_parrafo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Aplicacion"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/derechos1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewPrivacidad"
                android:layout_marginTop="14dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/tamanio_item_pequenio"
                tools:text="@string/derechos1" />

            <TextView
                android:id="@+id/derechos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/derechos1"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/tamanio_item_pequenio"
                tools:text="@string/derechos2" />

            <TextView
                android:id="@+id/textViewTerminos"
                android:layout_width="@dimen/campos_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView20"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/termino"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPrivacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacidad"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:layout_below="@+id/textViewTerminos"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="@dimen/ancho_imagen_acerca"
                android:layout_height="@dimen/alto_imagen_acerca"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                app:srcCompat="@drawable/inicio_logo" />


            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/derechos2"
                android:text="@string/mail"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/tamanio_item" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>