<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextMail"
        android:layout_marginTop="10dp"
        android:id="@+id/fecha">

        <TextView
            android:id="@+id/ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ingreso"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/editTextFechaNac"
                android:layout_width="@dimen/ancho_imagen_acerca"
                android:layout_height="@dimen/campos_height"
                android:ems="10"
                android:hint="@string/fecha_nac_ejemplo"
                android:inputType="date"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/gris" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/torta"
                android:clickable="true"

                app:srcCompat="@drawable/torta" />

            <Button
                android:id="@+id/buttonVer"
                android:layout_width="78dp"
                android:layout_height="33dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/btn_ver"
                android:text="@string/ver"
                android:textColor="@color/secondaryText"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reciclador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondaryText"
            android:padding="3dp"
            android:scrollbars="vertical" />

        </ScrollView>

    </LinearLayout>






</RelativeLayout>